// Vitest Snapshot v1

exports[`WordHeatMap > word index is 1 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3 border-gray-100"
    data-testid="heat-map-word"
  >
    <span
      class="font-bold text-gray-900 text-gray-900"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white "
    >
      1
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word index is 2 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3 border-gray-100 bg-red-50"
    data-testid="heat-map-word"
  >
    <span
      class="font-bold text-gray-900 text-gray-900"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white bg-red-100"
    >
      2
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word index is 5 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3 border-gray-100 bg-red-100"
    data-testid="heat-map-word"
  >
    <span
      class="font-bold text-gray-900 text-gray-800"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white bg-red-300"
    >
      5
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word index is 10 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3 border-gray-200 bg-red-100"
    data-testid="heat-map-word"
  >
    <span
      class="font-bold text-gray-900 text-gray-700"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white bg-red-400"
    >
      10
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word index is 15 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3 border-gray-300 bg-red-200"
    data-testid="heat-map-word"
  >
    <span
      class="font-bold text-gray-900 text-gray-600"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white bg-red-500"
    >
      15
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word index is 20 1`] = `
<DocumentFragment>
  <span
    class="m-6 rounded-2xl border-2 p-3 border-gray-300 bg-red-500"
    data-testid="heat-map-word"
  >
    <span
      class="font-bold text-gray-900 text-white"
    >
      heat
    </span>
    <span
      class="ml-4 rounded-full py-1 px-3 text-white bg-black"
    >
      20
    </span>
  </span>
</DocumentFragment>
`;
